1933 Java moment